fix: add lost routs and replace "href" by forms
fix: add lost routs for 'News & Promo' and 'Contact us' pages
     routs 5. 6.

update: all previous templates:
         - replace hyperlinks by forms with bottons
         - add hyperlinks for added routs 5. 6.

--- a/templates/add_menu_item.html
+++ b/templates/add_menu_item.html
@@ -24,8 +24,8 @@
 				<div>
 			  		<ul class="menu">
 						<li><a href="/restaurants/">Restaurants</a></li>
-						<li><a href="/restaurants/menu_items/">All Menu</a></li>
-						<li>News & Promo</li>
+						<li><a href="/restaurants/menu_items/">All Menu items</a></li>
+						<li><a href="/restaurants/news_promo">News & Promo</a></li>
 			  		</ul>
 				</div>
 		  	</div>
@@ -39,10 +39,10 @@
 				<form action="{{ url_for('add_menu_item')}}" method = 'post'>
 					<dl>
 						<dt>Name:</dt>
-						<dd><input type ='text' size='30' name='name'></dd>
+						<dd><input required type ='text' size='30' name='name'></dd>
 						
 						<dt>Description:</dt>
-						<dd><textarea name = 'description' rows='10' cols='80'></textarea></dd>
+						<dd><textarea required name = 'description' rows='10' cols='80'></textarea></dd>
 					
 						<dt>Course:</dt>
 						<dd><input type ='radio' name='course' value='Appetizer'>Appetizer</dd>
@@ -70,6 +70,7 @@
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
+						<!--
                         <li>
 							<a href="/restaurants/">Back to restaurants</a>
 						</li>
@@ -82,7 +83,8 @@
 						<li> </li>
 						<li> </li>
 						<li> </li>
-						<li>Contact us</li>
+						-->
+						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
