--- a/templates/edit_menu_item_id.html
+++ b/templates/edit_menu_item_id.html
@@ -24,8 +24,8 @@
 				<div>
 			  		<ul class="menu">
 						<li><a href="/restaurants/">Restaurants</a></li>
-						<li><a href="/restaurants/menu_items/">All Menu</a></li>
-						<li>News & Promo</li>
+						<li><a href="/restaurants/menu_items/">All Menu items</a></li>
+						<li><a href="/restaurants/news_promo">News & Promo</a></li>
 			  		</ul>
 				</div>
 		  	</div>
@@ -89,7 +89,8 @@
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-                        <li>
+                        <!--
+						<li>
 							<a href="/restaurants/">Back to restaurants</a>
 						</li>
 						<li>
@@ -101,7 +102,8 @@
 						<li> </li>
 						<li> </li>
 						<li> </li>
-						<li>Contact us</li>
+						-->
+						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
