--- a/templates/menu_items.html
+++ b/templates/menu_items.html
@@ -24,8 +24,8 @@
 				<div>
 			  		<ul class="menu">
 						<li><a href="/restaurants">Restaurants</a></li>
-						<li><a href="/restaurants/menu_items">All Menu</a></li>
-						<li>News & Promo</li>
+						<li><a href="/restaurants/menu_items">All Menu items</a></li>
+						<li><a href="/restaurants/news_promo">News & Promo</a></li>
 			  		</ul>
 				</div>
 		  	</div>
@@ -36,7 +36,7 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>Our all menu items</h1>
+				<h1>List of all menu items:</h1>
                 {% for item in menu_items %}
 					<div class="item div_post">
 					    <h2>
@@ -45,6 +45,7 @@
 					    <p>
 							<span> {{item.description}} </span>
 						</p>
+						<!--
 					    <p> {{item.course}} </p>
 						{% if item.weight %}
 							<p> Dish weight: {{item.weight}} gr.</p>
@@ -52,10 +53,16 @@
 						{% if item.content %}
 							<p> Content: {{item.content}} </p>
 						{% endif %}
+						-->
 						<br><br>
 				    </div>
 				{% endfor %}
             </div>
+
+			<!-- form to load add new menu item form -->
+			<form action="{{ url_for('add_menu_item')}}" method = 'get'>
+				<input type='submit' name="open_add_form" value='Add new menu item'>
+			</form>
 		</div>
 	</section>
 
@@ -65,9 +72,10 @@
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-                        <li>
+						<!--
+						<li>
 							<a href="/restaurants/">Back to restaurants</a>
-						</li>
+						</li>						
 						<li>
 							<a href="/restaurants/menu_items/add">Add new menu item</a>
 						</li>
@@ -77,7 +85,8 @@
 						<li> </li>
 						<li> </li>
 						<li> </li>
-						<li>Contact us</li>
+						-->
+						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
