--- a/templates/restaurant_id.html
+++ b/templates/restaurant_id.html
@@ -24,8 +24,8 @@
 				<div>
 			  		<ul class="menu">
 						<li><a href="/restaurants">Restaurants</a></li>
-						<li><a href="/restaurants/menu_items">All Menu</a></li>
-						<li>News & Promo</li>
+						<li><a href="/restaurants/menu_items">All Menu items</a></li>
+						<li><a href="/restaurants/news_promo">News & Promo</a></li>
 			  		</ul>
 				</div>
 		  	</div>
@@ -43,9 +43,27 @@
 						<span> {{rest_item.description}} </span>
 					    <p> {{rest_item.address}} </p>
 						<h4>
+							<!--
 							<a href="/restaurants/rst_id{{rest_item.id}}/edit">Edit {{rest_item.name}} info</a>
 							<br>
 							<a href="/restaurants/rst_id{{rest_item.id}}/delete">Delete {{rest_item.name}} and its menu</a>
+							-->
+							<!-- form to load edit menu item form -->
+							<form action="{{ url_for('add_menu_item_to_restaurant_id', 
+											 rst_id = 'rst_id' ~ rest_item.id)}}" method = 'get'>
+								<input type='submit' name="open_add_form" value="Add new item to '{{rest_item.name}}'">
+							</form>
+
+							<!-- form to load edit menu item form -->
+							<form action="{{ url_for('edit_restaurant_id', 
+										 	 rst_id = 'rst_id' ~ rest_item.id)}}" method = 'get'>
+								<input type='submit' name="open_edit_form" value="Edit '{{rest_item.name}}' info">
+							</form>
+							<!-- form to load delete menu item form -->
+							<form action="{{ url_for('delete_restaurant_id', 
+											 rst_id = 'rst_id' ~ rest_item.id)}}" method = 'get'>
+								<input type='submit' name="open_delete_form" value="Delete '{{rest_item.name}}' and its menu">
+							</form>
 						</h4>
 						<h1>Our menu:</h1>
 						{% if mnu_itm_prs %}
@@ -63,9 +81,24 @@
 									<p>Comment: {{item.comment}}</p>
 								{% endif %}
 								<h4>
+									<!--
 									<a href="/restaurants/rst_id{{rest_item.id}}/mnu_id{{item.menu_item_id}}/edit">Edit menu item at {{rest_item.name}}</a>
 									<br>
 									<a href="/restaurants/rst_id{{rest_item.id}}/mnu_id{{item.menu_item_id}}/delete">Delete menu item from {{rest_item.name}}</a>
+									-->
+									<!-- form to load edit menu item form -->
+									<form action="{{ url_for('edit_menu_item_for_restaurant_id', 
+													 rst_id = 'rst_id' ~ rest_item.id, 
+													 mnu_id = 'mnu_id' ~ item.menu_item_id)}}" method = 'get'>
+										<input type='submit' name="open_edit_form" value="Edit price and comment">
+									</form>
+									<!-- form to load delete menu item form -->
+									<form action="{{ url_for('delete_menu_item_for_restaurant_id', 
+													 rst_id = 'rst_id' ~ rest_item.id, 
+													 mnu_id = 'mnu_id' ~ item.menu_item_id)}}" method = 'get'>
+										<input type='submit' name="open_delete_form" value="Delete item from '{{rest_item.name}}'">
+									</form>
+
 								</h4>
 								<br>
 							{% endfor %}
@@ -83,6 +116,7 @@
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
+						<!--
                         <li>
 							<a href="/restaurants">Back to restaurants</a>
 						</li>
@@ -95,7 +129,8 @@
 						<li> </li>
 						<li> </li>
 						<li> </li>
-						<li>Contact us</li>
+						-->
+						<li><a href="/restaurants/contact_us">Contact us</a></li>
 			  		</ul>
 				</div>
 		  	</div>
