--- a/templates/menu_items.html
+++ b/templates/menu_items.html
@@ -61,7 +61,7 @@
 
 			<!-- form to load add new menu item form -->
 			<form action="{{ url_for('add_menu_item')}}" method = 'get'>
-				<input type='submit' name="open_add_form" value='Add new menu item'>
+				<input type='submit' value='Add new menu item'>
 			</form>
 		</div>
 	</section>
