--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -52,7 +52,7 @@
 			
 			<!-- form to load add restaurant form -->
 			<form action="{{ url_for('add_restaurant')}}" method = 'get'>
-				<input type='submit' name="open_add_form" value='Add new restaurant'>
+				<input type='submit' value='Add new restaurant'>
 			</form>
 		</div>
 	</section>
