--- a/templates/add_menu_item.html
+++ b/templates/add_menu_item.html
@@ -56,10 +56,16 @@
 						<dt>Content:</dt>
 						<dd><textarea name = 'content' rows='5' cols='80'></textarea></dd>
 					</dl>
-		 
+					
 					<input type='submit' name="add_button" value='Add menu item'>
-					<input type='submit' name="cancel_button" value='Cancel'>		 
-			  </form>
+					<!--
+					<input type='submit' name="cancel_button" value='Cancel'>	
+					-->	 
+			  	</form>
+
+			  	<form action="{{ url_for('menu_items')}}" method = 'get'>
+					<input type='submit' value='Cancel'>
+				</form>
             </div>
 		</div>
 	</section>
