--- a/templates/edit_menu_item_id.html
+++ b/templates/edit_menu_item_id.html
@@ -45,8 +45,8 @@
 						<dd><textarea name = 'description' rows='10' cols='80' placeholder='{{menu_item.description}}'></textarea></dd>
 					
 						<dt>Course:</dt>
-						{% if menu_item.course == 'Appetizier' %}
-	             			<dd><input type ='radio' name='course' value='Appetizer'checked >Appetizer</dd>
+						{% if menu_item.course == 'Appetizer' %}
+	             			<dd><input type ='radio' name='course' value='Appetizer' checked>Appetizer</dd>
 	       				{%else%}
 	             			<dd><input type ='radio' name='course' value='Appetizer' >Appetizer</dd>
                			{% endif %}
