--- a/templates/add_restaurant.html
+++ b/templates/add_restaurant.html
@@ -36,21 +36,27 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{menu_item.name}}</h1>
-				{% if rest_lst %}
-					<p>'{{menu_item.name}}' is used in menu of following restarunts: </p>
-					{% for rest in rest_lst%}
-						<p> - {{rest.name}}</p>
-					{% endfor %}
-					<p> It will be deleted from restaurants and list of menu items. </p>
-				{% else %}
-					<p>'{{menu_item.name}}' will be deleted from list of menu items. </p>
-				{% endif %}
-				<h3> Are you sure you want to delete '{{menu_item.name}}'? </h3>
-     			<form action="{{ url_for('delete_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" method = 'post'>
-					<input type='submit' name="delete_button" value='Delete menu item'>
+				<form action="{{ url_for('add_restaurant')}}" method = 'post'>
+					<dl>
+						<dt>Name:</dt>
+						<dd><input required type ='text' size='30' name='name'></dd>
+						
+						<dt>Description:</dt>
+						<dd><textarea required name = 'description' rows='10' cols='80'></textarea></dd>
+					
+						<dt>Address:</dt>
+						<dd><input required type ='text' size='30' name='address'></dd>						
+					</dl>
+		 
+					<input type='submit' name="add_button" value='Add restaurant'>
+					<!--
 					<input type='submit' name="cancel_button" value='Cancel'>
-     			</form>
+					-->		 
+			  	</form>
+
+				<form action="{{ url_for('restaurants')}}" method = 'get'>
+					<input type='submit' value='Cancel'>
+				</form>
             </div>
 		</div>
 	</section>
