--- a/templates/delete_restaurant_id.html
+++ b/templates/delete_restaurant_id.html
@@ -36,18 +36,16 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{menu_item.name}}</h1>
-				{% if rest_lst %}
-					<p>'{{menu_item.name}}' is used in menu of following restarunts: </p>
-					{% for rest in rest_lst%}
-						<p> - {{rest.name}}</p>
-					{% endfor %}
-					<p> It will be deleted from restaurants and list of menu items. </p>
+				<h1>{{rest.name}}</h1>
+				{% if mnu_itms_qnt %}
+					<p>'{{rest.name}}' serves {{mnu_itms_qnt}} menu items: </p>
+					<h3> Are you sure you want to delete '{{rest.name}}' and its menu? </h3>
 				{% else %}
-					<p>'{{menu_item.name}}' will be deleted from list of menu items. </p>
+					<p>'{{rest.name}}' will be deleted from list of restaurants. </p>
+					<h3> Are you sure you want to delete '{{rest.name}}'? </h3>
 				{% endif %}
-				<h3> Are you sure you want to delete '{{menu_item.name}}'? </h3>
-     			<form action="{{ url_for('delete_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" method = 'post'>
+				
+     			<form action="{{ url_for('delete_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'post'>
 					<input type='submit' name="delete_button" value='Delete menu item'>
 					<input type='submit' name="cancel_button" value='Cancel'>
      			</form>
