--- a/templates/edit_restaurant_id.html
+++ b/templates/edit_restaurant_id.html
@@ -36,21 +36,22 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{menu_item.name}}</h1>
-				{% if rest_lst %}
-					<p>'{{menu_item.name}}' is used in menu of following restarunts: </p>
-					{% for rest in rest_lst%}
-						<p> - {{rest.name}}</p>
-					{% endfor %}
-					<p> It will be deleted from restaurants and list of menu items. </p>
-				{% else %}
-					<p>'{{menu_item.name}}' will be deleted from list of menu items. </p>
-				{% endif %}
-				<h3> Are you sure you want to delete '{{menu_item.name}}'? </h3>
-     			<form action="{{ url_for('delete_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" method = 'post'>
-					<input type='submit' name="delete_button" value='Delete menu item'>
-					<input type='submit' name="cancel_button" value='Cancel'>
-     			</form>
+				<form action="{{ url_for('edit_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'post'>
+					<dl>
+						<dt>Name:</dt>
+						<dd><input type ='text' size='30' name='name' placeholder='{{rest.name}}'></dd>
+						
+						<dt>Description:</dt>
+						<dd><textarea name = 'description' rows='10' cols='80' placeholder='{{rest.description}}'></textarea></dd>
+					
+						<dt>Address:</dt>
+						<dd><input type ='text' size='30' name='address' placeholder='{{rest.address}}'></dd>
+			
+					</dl>
+		 
+					<input type='submit' name="submit_button" value='Submit changes'>
+					<input type='submit' name="cancel_button" value='Cancel'>		 
+			  </form>
             </div>
 		</div>
 	</section>
@@ -61,8 +62,8 @@
 		  	<div class="flex-container space-between header-content">
  				<div>
 			  		<ul class="menu">
-						<!--
-                        <li>
+                        <!--
+						<li>
 							<a href="/restaurants/">Back to restaurants</a>
 						</li>
 						<li>
