--- a/templates/add_menu_item_to_restaurant_id.html
+++ b/templates/add_menu_item_to_restaurant_id.html
@@ -36,19 +36,32 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{rest.name}}</h1>
-				{% if mnu_itms_qnt %}
-					<p>'{{rest.name}}' serves {{mnu_itms_qnt}} menu items: </p>
-					<h3> Are you sure you want to delete '{{rest.name}}' and its menu? </h3>
-				{% else %}
-					<p>'{{rest.name}}' will be deleted from list of restaurants. </p>
-					<h3> Are you sure you want to delete '{{rest.name}}'? </h3>
-				{% endif %}
-				
-     			<form action="{{ url_for('delete_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'post'>
-					<input type='submit' name="delete_button" value='Delete restaurant'>
+				<form action="{{ url_for('add_menu_item_to_restaurant_id',
+								rst_id = 'rst_id' ~ rest.id,
+								mnu_id = 'mnu_id' ~ item.id)}}" method = 'post'>
+					<dl>						
+						<h2>{{item.name}}</h2>
+						<p>{{item.description}}</p>
+						<!--
+						<dt>Menu item:</dt>
+						<dd><input required type ='text' size='30' name='name'></dd>
+						-->
+						<dt>Price:</dt>
+						<dd><input required type ='text' size='30' name='price'></dd>	
+					
+						<dt>Commnet:</dt>
+						<dd><input type ='text' size='30' name='comment'></dd>						
+					</dl>
+		 
+					<input type='submit' name="add_button" value='Add item to restaurant'>
+					<!--
 					<input type='submit' name="cancel_button" value='Cancel'>
-     			</form>
+					-->		 
+			  	</form>
+
+				<form action="{{ url_for('restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'get'>
+					<input type='submit' value='Cancel'>
+				</form>
             </div>
 		</div>
 	</section>
