--- a/templates/delete_menu_item_for_restaurant_id.html
+++ b/templates/delete_menu_item_for_restaurant_id.html
@@ -36,17 +36,14 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{rest.name}}</h1>
-				{% if mnu_itms_qnt %}
-					<p>'{{rest.name}}' serves {{mnu_itms_qnt}} menu items: </p>
-					<h3> Are you sure you want to delete '{{rest.name}}' and its menu? </h3>
-				{% else %}
-					<p>'{{rest.name}}' will be deleted from list of restaurants. </p>
-					<h3> Are you sure you want to delete '{{rest.name}}'? </h3>
-				{% endif %}
+				<h1>{{item.name}}</h1>
+				<p>'{{item.name}}' will be deleted from restaurant '{{rest.name}}'. </p>
+				<h3> Are you sure you want to delete? </h3>
 				
-     			<form action="{{ url_for('delete_restaurant_id', rst_id = 'rst_id' ~ rest.id)}}" method = 'post'>
-					<input type='submit' name="delete_button" value='Delete restaurant'>
+     			<form action="{{ url_for('delete_menu_item_for_restaurant_id', 
+								rst_id = 'rst_id' ~ rest.id,
+								mnu_id = 'mnu_id' ~ item.id)}}" method = 'post'>
+					<input type='submit' name="delete_button" value='Delete menu item'>
 					<input type='submit' name="cancel_button" value='Cancel'>
      			</form>
             </div>
