--- a/templates/restaurant_id.html
+++ b/templates/restaurant_id.html
@@ -49,11 +49,11 @@
 							<a href="/restaurants/rst_id{{rest_item.id}}/delete">Delete {{rest_item.name}} and its menu</a>
 							-->
 							<!-- form to load edit menu item form -->
-							<form action="{{ url_for('add_menu_item_to_restaurant_id', 
+							<form action="{{ url_for('menu_items', 
 											 rst_id = 'rst_id' ~ rest_item.id)}}" method = 'get'>
 								<input type='submit' value="Add new item to '{{rest_item.name}}'">
 							</form>
-
+							
 							<!-- form to load edit menu item form -->
 							<form action="{{ url_for('edit_restaurant_id', 
 										 	 rst_id = 'rst_id' ~ rest_item.id)}}" method = 'get'>
