update: forms and methods for 'info' pages
update: added forms and methods for contact_us and news_promo pages
fix: small typo errors

--- a/templates/menu_items.html
+++ b/templates/menu_items.html
@@ -54,7 +54,7 @@
 								<form action="{{ url_for('add_menu_item_to_restaurant_id', 
 												rst_id = 'rst_id' ~ rest.id,
 												mnu_id = 'mnu_id' ~ item.id )}}" method = 'get'>
-									<input type='submit' value='Add restaurant menu'>
+									<input type='submit' value='Add to restaurant menu'>
 								</form>
 							{% else %}
 								<h2>
