--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -37,17 +37,21 @@
 		<div class="container">
 			<div class="portfolio">
 				<h1>Our restaurants</h1>
-                {% for item in rest_items %}
-					<div class="item div_post">
-					    <a href="/restaurants/rst_id{{item.id}}">
-                            <img src={{url_for('static', filename = item.name.lower().strip(' ').replace(' ','_').replace("'","")+'.jpg' )}} width="270" alt="Restaurant logo">
-                        </a>
-					    <h2> {{item.name}} </h2>
-					    <span> {{item.description}} </span>
-					    <p> {{item.address}} </p>
-						<br><br>
-				    </div>
-				{% endfor %}
+                {% if rest_items %}
+					{% for item in rest_items %}
+						<div class="item div_post">
+							<a href="/restaurants/rst_id{{item.id}}">
+								<img src={{url_for('static', filename = item.name.lower().strip(' ').replace(' ','_').replace("'","")+'.jpg' )}} width="270" alt="Restaurant logo">
+							</a>
+							<h2> {{item.name}} </h2>
+							<span> {{item.description}} </span>
+							<p> {{item.address}} </p>
+							<br><br>
+						</div>
+					{% endfor %}
+				{% else %}
+					<h3> No restaurants yet ...</h3>
+				{% endif%}
             </div>
 			
 			<!-- form to load add restaurant form -->
