--- a/templates/restaurant_id.html
+++ b/templates/restaurant_id.html
@@ -38,7 +38,7 @@
 			<div class="portfolio">
 				<h1>{{rest_item.name}}</h1>
                 	<div class="item div_post">
-					    <img src={{url_for('static', filename = rest_item.name.lower().strip(' ').replace(' ','_').replace("'","")+'.jpg' )}} width="270" alt="Restaurant logo">
+					    <img src={{url_for('static', filename = logo_name )}} width="270" alt="Restaurant logo">
                         <br>
 						<span> {{rest_item.description}} </span>
 					    <p> {{rest_item.address}} </p>
