--- a/templates/news_promo.html
+++ b/templates/news_promo.html
@@ -38,31 +38,34 @@
 			<div class="portfolio">
 				<h1>News and promo menu:</h1>
 				<div class="item div_post">
-					{% if rest_lst %}
-						{% for (rest_item, logo_name) in rest_lst %}    
-							<img src={{url_for('static', filename = logo_name)}} width="120" alt="Restaurant logo">
+					{% if promo_lst %}
+						{% set ns = namespace(prev_rest_id = None) %}						
+						{% for (item, logo_name) in promo_lst %}    
+							{% set (rest_id, rest_name, mnu_name, cmnt) = item %}
+							
+							{% if rest_id != ns.prev_rest_id %}
+								{% if ns.prev_rest_id != None %}
+									<h4> <a href="/restaurants/rst_id{{ns.prev_rest_id}}">Visit us now!!!</a></h4>	
+									<br>
+								{% endif %}	
+
+								<img src={{url_for('static', filename = logo_name)}} width="120" alt="Restaurant logo">
+								<!--
+								<br>
+								<span> {rest_item.description} </span>
+								<p> {rest_item.address} </p>
+								-->			
+							{% endif %}
+							
+							<h3>{{mnu_name}}</h3>
 							<!--
-							<br>
-							<span> {{rest_item.description}} </span>
-							<p> {{rest_item.address}} </p>
-							-->						
-							{% for menu in mnu_itms %}
-								{% for item in mnu_itm_prs %}
-									{% if menu.id == item.menu_item_id and  
-										rest_item.id == item.restaurant_id  %}
-											<h3>{{menu.name}}</h3>
-											<!--
-											<p>{{menu.description}}</p>
-											
-											<p>Price: {{item.price}} rub</p>
-											-->
-											<p>Promo: {{item.comment}}</p>
-									{% endif %}
-								{% endfor %}
-							{% endfor %}
-							<h4> <a href="/restaurants/rst_id{{rest_item.id}}">Visit us now!!!</a></h4>	
-							<br>							
+							<p>{menu.description}</p>
+							<p>Price: {item.price} rub</p>
+							-->
+							<p>Promo: {{cmnt}}</p>
+							{% set ns.prev_rest_id = rest_id %}
 						{% endfor %}
+						<h4> <a href="/restaurants/rst_id{{ns.prev_rest_id}}">Visit us now!!!</a></h4>
 					{% else %}
 						<h3>No news and promo yet ...</h3>
 					{% endif %}
