--- a/templates/delete_menu_item_id.html
+++ b/templates/delete_menu_item_id.html
@@ -36,17 +36,17 @@
 	<section>
 		<div class="container">
 			<div class="portfolio">
-				<h1>{{menu_item.name}}</h1>
+				<h1>{{ menu_item.name }}</h1>
 				{% if rest_lst %}
-					<p>'{{menu_item.name}}' is used in menu of following restarunts: </p>
-					{% for rest in rest_lst%}
-						<p> - {{rest.name}}</p>
+					<p>'{{ menu_item.name }}' is used in menu of following restarunts: </p>
+					{% for (id, name) in rest_lst %}
+						<p> - {{ name }}</p>
 					{% endfor %}
 					<p> It will be deleted from restaurants and list of menu items. </p>
 				{% else %}
-					<p>'{{menu_item.name}}' will be deleted from list of menu items. </p>
+					<p>'{{ menu_item.name }}' will be deleted from list of menu items. </p>
 				{% endif %}
-				<h3> Are you sure you want to delete '{{menu_item.name}}'? </h3>
+				<h3> Are you sure you want to delete '{{ menu_item.name }}'? </h3>
      			<form action="{{ url_for('delete_menu_item_id', mnu_id = 'mnu_id' ~ menu_item.id)}}" method = 'post'>
 					<input type='submit' name="delete_button" value='Delete menu item'>
 					<input type='submit' name="cancel_button" value='Cancel'>
