--- a/templates/restaurant_id.html
+++ b/templates/restaurant_id.html
@@ -67,11 +67,11 @@
 						</h4>
 						<h1>Our menu:</h1>
 						{% if menu_items %}
-							{% for (id, name, description, price, comment) in menu_items %}
+							{% for (item, price, comment) in menu_items %}
 								<h3>
-									<a href="/restaurants/rst_id{{rest_item.id}}/mnu_id{{id}}">{{name}}</a>
+									<a href="/restaurants/rst_id{{rest_item.id}}/mnu_id{{item.id}}">{{item.name}}</a>
 								</h3>
-								<p>{{description}}</p>
+								<p>{{item.description}}</p>
 							
 								<p>Price: {{price}} rub</p>
 								{% if comment %}
@@ -86,13 +86,13 @@
 									<!-- form to load edit menu item form -->
 									<form action="{{ url_for('edit_menu_item_for_restaurant_id', 
 													 rst_id = 'rst_id' ~ rest_item.id, 
-													 mnu_id = 'mnu_id' ~ id)}}" method = 'get'>
+													 mnu_id = 'mnu_id' ~ item.id)}}" method = 'get'>
 										<input type='submit' value="Edit price and comment">
 									</form>
 									<!-- form to load delete menu item form -->
 									<form action="{{ url_for('delete_menu_item_for_restaurant_id', 
 													 rst_id = 'rst_id' ~ rest_item.id, 
-													 mnu_id = 'mnu_id' ~ id)}}" method = 'get'>
+													 mnu_id = 'mnu_id' ~ item.id)}}" method = 'get'>
 										<input type='submit' value="Delete item from '{{rest_item.name}}'">
 									</form>
 
